attempt to fix nav text on mobile

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -63,7 +63,6 @@
     .offcanvas .bottom-text{
         text-align:center;
         padding-bottom: 5px;
-        text-wrap:wrap;
     }
 
     .bottom-nav .nav-link{
